example/echo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-echo-server
spec:
  type: ClusterIP
  selector:
    app: echo-server
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 8080
    # nodePort: 30080
