example/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-echo-server
spec:
  rules:
  # - host:
  - http:
      paths:
      - path: /
        backend:
          serviceName: service-echo-server
          servicePort: 9000
